--- a/nl/dom/chrome/security/security.properties
+++ b/nl/dom/chrome/security/security.properties
@@ -16,4 +16,4 @@ InsecurePasswordsPresentOnIframe=Wachtwoordvelden aanwezig op een onveilig ifram
 LoadingMixedActiveContent=Laden van gemengde (onveilige) actieve inhoud op een beveiligde pagina “%1$S”
 LoadingMixedDisplayContent=Laden van gemengde (onveilige) vensterinhoud op een beveiligde pagina “%1$S”
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
-BothAllowScriptsAndSameOriginPresent=Een iframe met als sandboxattribute allow-scripts en allow-same-origin kan zijn sandbox verwijderen.
+BothAllowScriptsAndSameOriginPresent=Een iframe met zowel allow-scripts als allow-same-origin voor zijn sandbox-attribuut kan zijn sandboxing verwijderen.
