--- a/nl/security/manager/chrome/pipnss/pipnss.properties
+++ b/nl/security/manager/chrome/pipnss/pipnss.properties
@@ -116,7 +116,7 @@ CertDumpAuthKeyID=Sleutel-ID certificatieautoriteit
 CertDumpExtKeyUsage=Uitgebreid sleutelgebruik
 CertDumpAuthInfoAccess=Toegang tot informatie over de organisatie
 CertDumpAnsiX9DsaSignature=ANSI X9.57 DSA-ondertekening
-CertDumpAnsiX9DsaSignatureWithSha1=ANSI X9.57 DSA-ondertekening met SHA1-Digest
+CertDumpAnsiX9DsaSignatureWithSha1=ANSI X9.57 DSA-ondertekening met SHA1-digest
 CertDumpAnsiX962ECDsaSignatureWithSha1=ANSI X9.62 ECDSA-ondertekening met SHA1
 CertDumpKUSign=Ondertekenen
 CertDumpKUNonRep=Erkenning
