--- a/nl/toolkit/chrome/global/autocomplete.properties
+++ b/nl/toolkit/chrome/global/autocomplete.properties
@@ -10,7 +10,7 @@ searchWithEngine = Zoeken met %S
 # %1$S is the search engine's name, %2$S is the search query.
 # This format was chosen because the provider can also end with "Search"
 # (e.g.: MSN Search).
-searchWithEngineForQuery = %2$S — Zoeken met %1$S
+searchWithEngineForQuery = %2$S – Zoeken met %1$S
 switchToTab = Wisselen naar tabblad
 # LOCALIZATION NOTE (visitURL):
 # %S is the URL to visit.
