--- a/nl/webapprt/webapprt/webapp.properties
+++ b/nl/webapprt/webapprt/webapp.properties
@@ -50,4 +50,4 @@ webapps.uninstall.uninstall=App de-installeren
 webapps.uninstall.dontuninstall=Niet de-installeren
 
 paymentDialog.title=Betaling
-paymentDialog.message=Welke betaalprovider wilt u gebruiken?
+paymentDialog.message=Welke betalingsprovider wilt u gebruiken?
