--- a/nl/toolkit/chrome/global/charsetMenu.properties
+++ b/nl/toolkit/chrome/global/charsetMenu.properties
@@ -6,10 +6,10 @@
 # Localizations may add or delete properties where the property key ends with
 # ".key" as appropriate for the localization. The code that uses this data can
 # deal with the absence of an access key for an item.
-# 
+#
 # For gbk, gbk.bis and gbk.bis.key are used to trigger string changes in
 # localizations.
-#
+# 
 # Make sure the keys defined here don't collide with
 # charsetMenuAutodet.accesskey in charsetMenu.dtd.
 #
@@ -64,7 +64,7 @@ ISO-8859-2.key   = l
 ISO-8859-2       = Centraal-Europees (ISO)
 
 # Chinese, Simplified
-gbk.bis.key      =          S
+gbk.bis.key      = s
 gbk.bis          = Chinees, vereenvoudigd
 
 # Chinese, Traditional
