Bug 1050502 - [timeline] display console.time/timeEnd calls as markers

--- a/pl/browser/chrome/browser/devtools/timeline.properties
+++ b/pl/browser/chrome/browser/devtools/timeline.properties
@@ -12,3 +12,5 @@ timeline.label.styles=Styl
 timeline.label.reflow=Reflow
 timeline.label.paint=Malowanie
 timeline.label.domevent=Zdarzenie DOM
+timeline.label.consoleTime=Konsola
+timeline.markerDetailFormat=%1$S (%2$S)
