restore a removed string by the last patch

--- a/nl/mobile/android/chrome/browser.properties
+++ b/nl/mobile/android/chrome/browser.properties
@@ -356,6 +356,7 @@ getUserMedia.videoSource.default = Camera %S
 getUserMedia.videoSource.frontCamera = Camera aan voorzijde
 getUserMedia.videoSource.backCamera = Camera aan achterzijde
 getUserMedia.videoSource.none = Geen video
+getUserMedia.videoSource.prompt = Te gebruiken camera
 getUserMedia.videoSource.tabShare = Tabblad om te streamen kiezen
 getUserMedia.videoSource.prompt = Videobron
 getUserMedia.audioDevice.default = Microfoon %S
