--- a/nl/security/manager/chrome/pippki/pippki.properties
+++ b/nl/security/manager/chrome/pippki/pippki.properties
@@ -73,18 +73,12 @@ pageInfo_NoEncryption=Niet-beveiligde verbinding
 pageInfo_Privacy_None1=De website %S ondersteunt geen versleuteling voor de pagina die u bekijkt.
 pageInfo_Privacy_None2=Informatie die zonder versleuteling over het internet wordt verzonden kan tijdens de overdracht worden gezien door andere personen.
 pageInfo_Privacy_None3=De pagina die u bekijkt is niet beveiligd.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
-pageInfo_StrongEncryptionWithBitsAndProtocol=Beveiligde verbinding: hoge graad van versleuteling (%1$S, %2$S-bits sleutels, %3$S)
-pageInfo_Privacy_Strong1=De pagina die u bekijkt was beveiligd voordat deze over het internet werd verzonden.
-pageInfo_Privacy_Strong2=Versleuteling maakt het erg moeilijk voor onbevoegde personen om informatie te bekijken die tussen computers wordt uitgewisseld. Het is daarom erg onwaarschijnlijk dat iemand deze pagina heeft gelezen terwijl hij over het netwerk werd verzonden.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-# %3$S is protocol version like "SSL 3" or "TLS 1.2"
-pageInfo_WeakEncryptionWithBitsAndProtocol=Beveiligde verbinding: lage graad van versleuteling (%1$S, %2$S-bits sleutels, %3$S)
-pageInfo_Privacy_Weak1=De website %S gebruikt een lage graad van versleuteling voor de pagina die u bekijkt.
-pageInfo_Privacy_Weak2=Een lage graad van versleuteling kan sommige onbevoegde personen in staat stellen deze informatie te bekijken.
+pageInfo_EncryptionWithBitsAndProtocol=Beveiligde verbinding (%1$S, %2$S-bits sleutels, %3$S)
+pageInfo_Privacy_Encrypted1=De pagina die u bekijkt was beveiligd voordat deze over het internet werd verzonden.
+pageInfo_Privacy_Encrypted2=Versleuteling maakt het moeilijk voor onbevoegde personen om informatie te bekijken die tussen computers wordt uitgewisseld. Het is daarom onwaarschijnlijk dat iemand deze pagina heeft gelezen terwijl hij over het netwerk werd verzonden.
 pageInfo_MixedContent=Gedeeltelijk beveiligde verbinding
 pageInfo_Privacy_Mixed1=Delen van de pagina die u bekijkt waren niet versleuteld voordat deze over het internet werden verzonden. 
 
