--- a/nl/security/manager/chrome/pippki/pippki.properties
+++ b/nl/security/manager/chrome/pippki/pippki.properties
@@ -80,7 +80,7 @@ pageInfo_EncryptionWithBitsAndProtocol=Beveiligde verbinding (%1$S, %2$S-bits sl
 pageInfo_Privacy_Encrypted1=De pagina die u bekijkt was beveiligd voordat deze over het internet werd verzonden.
 pageInfo_Privacy_Encrypted2=Versleuteling maakt het moeilijk voor onbevoegde personen om informatie te bekijken die tussen computers wordt uitgewisseld. Het is daarom onwaarschijnlijk dat iemand deze pagina heeft gelezen terwijl hij over het netwerk werd verzonden.
 pageInfo_MixedContent=Gedeeltelijk beveiligde verbinding
-pageInfo_Privacy_Mixed1=Delen van de pagina die u bekijkt waren niet versleuteld voordat deze over het internet werden verzonden. 
+pageInfo_Privacy_Broken1=Delen van de pagina die u bekijkt waren niet versleuteld of de versleuteling is niet sterk genoeg voordat deze over het internet werden verzonden.
 
 #Cert Viewer
 certDetails=Certificaatweergave:
