Bug 1057035 - Fix terminology used in the certificate exception dialog.

--- a/nl/security/manager/chrome/pippki/pippki.properties
+++ b/nl/security/manager/chrome/pippki/pippki.properties
@@ -147,17 +147,17 @@ writeFileUnknownError=Onbekende fout
 addExceptionBrandedWarning2=U staat op het punt te overschrijven hoe %S deze website identificeert.
 addExceptionInvalidHeader=Deze website probeert zich te identificeren met ongeldige informatie.
 addExceptionDomainMismatchShort=Verkeerde website
-addExceptionDomainMismatchLong=Het certificaat behoort toe aan een andere website, wat kan duiden op identiteitsdiefstal.
+addExceptionDomainMismatchLong2=Het certificaat behoort toe aan een andere website, wat kan betekenen dat iemand deze website probeert na te bootsen.
 addExceptionExpiredShort=Verouderde informatie
-addExceptionExpiredLong=Het certificaat is momenteel niet geldig. Het is onmogelijk om te controleren of deze identiteit is gerapporteerd als vermist of gestolen.
+addExceptionExpiredLong2=Het certificaat is momenteel niet geldig. Het kan zijn gestolen of vermist en gebruikt worden door iemand deze website probeert na te bootsen.
 addExceptionUnverifiedOrBadSignatureShort=Onbekende identiteit
-addExceptionUnverifiedOrBadSignatureLong=Het certificaat wordt niet vertrouwd, omdat het niet is geverifieerd door een erkende autoriteit via een beveiligde ondertekening.
+addExceptionUnverifiedOrBadSignatureLong2=Het certificaat wordt niet vertrouwd, omdat het niet is geverifieerd dat het is uitgegeven door een vertrouwde autoriteit via een beveiligde ondertekening.
 addExceptionValidShort=Geldig certificaat
 addExceptionValidLong=Deze website verzorgt geldige, geverifieerde identificatie. U hoeft geen uitzondering toe te voegen.
 addExceptionCheckingShort=Informatie controleren
-addExceptionCheckingLong=Poging tot identificatie van de website…
+addExceptionCheckingLong2=Poging tot identificatie van de website…
 addExceptionNoCertShort=Geen informatie beschikbaar
-addExceptionNoCertLong=Identificatiestatus van de gegeven website is niet te verkrijgen.
+addExceptionNoCertLong2=Identificatiestatus van deze website is niet te verkrijgen.
 addExceptionConnectionFailed=Verbinding mislukt
 
 #Certificate Exists in database
