Update mail, suite, and security

--- a/zh-TW/security/manager/chrome/pipnss/pipnss.properties
+++ b/zh-TW/security/manager/chrome/pipnss/pipnss.properties
@@ -118,11 +118,11 @@ CertDumpAuthInfoAccess=授權資訊存取
 CertDumpAnsiX9DsaSignature=ANSI X9.57 DSA 簽章
 CertDumpAnsiX9DsaSignatureWithSha1=ANSI X9.57 DSA 簽章加 SHA1 摘要
 CertDumpAnsiX962ECDsaSignatureWithSha1=ANSI X9.62 ECDSA 簽章加 SHA1
-CertDumpKUSign=簽署中
+CertDumpKUSign=簽署
 CertDumpKUNonRep=無可否認服務
-CertDumpKUEnc=Key 加密
+CertDumpKUEnc=加密金鑰
 CertDumpKUDEnc=資料加密
-CertDumpKUKA=金鑰同意書
+CertDumpKUKA=同意金鑰
 CertDumpKUCertSign=憑證簽署者
 CertDumpKUCRLSigner=廢止清冊簽署者
 CertDumpCritical=Critical
@@ -132,11 +132,11 @@ CertDumpCertSig=憑證簽章值
 CertDumpExtensionFailure=錯誤: 無法處理擴充欄位
 CertDumpIsCA=這是憑證機構
 CertDumpIsNotCA=這不是憑證機構
-CertDumpPathLen=中繼憑證機構最大值: %S
+CertDumpPathLen=中繼憑證機構數量最大值: %S
 CertDumpPathLenUnlimited=不限
 CertDumpEKU_1_3_6_1_5_5_7_3_1=TLS Web 伺服器鑑別
 CertDumpEKU_1_3_6_1_5_5_7_3_2=TLS Web 用戶端鑑別
-CertDumpEKU_1_3_6_1_5_5_7_3_3=代碼簽署
+CertDumpEKU_1_3_6_1_5_5_7_3_3=簽署程式碼
 CertDumpEKU_1_3_6_1_5_5_7_3_4=E-mail 保護
 CertDumpEKU_1_3_6_1_5_5_7_3_8=時間戳記
 CertDumpEKU_1_3_6_1_5_5_7_3_9=OCSP 簽署
