--- a/zh-TW/suite/chrome/common/dataman/dataman.properties
+++ b/zh-TW/suite/chrome/common/dataman/dataman.properties
@@ -33,7 +33,7 @@ perm.stylesheet.label=載入樣式表
 perm.sts/use.label=使用強制安全傳輸
 perm.sts/subd.label=強制套用安全傳輸到子網域
 
-perm.type.default=選擇一個類型
+perm.type.default=選擇類型
 
 # passwords
 pwd.hidePasswords=隱藏密碼
