a few devtools translations

--- a/ga-IE/browser/chrome/browser/devtools/debugger.properties
+++ b/ga-IE/browser/chrome/browser/devtools/debugger.properties
@@ -103,7 +103,7 @@ tracingNotStartedText=Níor tosaíodh rianú fós
 
 # LOCALIZATION NOTE (eventCheckboxTooltip): The tooltip text to display when
 # the user hovers over the checkbox used to toggle an event breakpoint.
-eventCheckboxTooltip=Toggle breaking on this event
+eventCheckboxTooltip=Scoránaigh briseadh ar an teagmhas seo
 
 # LOCALIZATION NOTE (eventOnSelector): The text to display in the events tab
 # for every event item, between the event type and event selector.
