--- a/ga-IE/browser/chrome/browser/devtools/gclicommands.properties
+++ b/ga-IE/browser/chrome/browser/devtools/gclicommands.properties
@@ -200,7 +200,7 @@ highlightFillDesc=Stíl líonta
 # LOCALIZATION NOTE (highlightFillManual) A fuller description of the 'fill'
 # option parameter to the 'highlight' command, displayed when the user asks for
 # help on what it does.
-highlightFillManual=Override the default region fill style with a custom color
+highlightFillManual=Sáraigh an stíl líonta réamhshocraithe le do rogha datha
 
 # LOCALIZATION NOTE (highlightKeepDesc) A very short string to describe the
 # 'keep' option parameter to the 'highlight' command, which is displayed in a
@@ -223,7 +223,7 @@ highlightOutputConfirm=%1$S nód aibhsithe
 # informing the user how many nodes have been highlighted successfully and that
 # some nodes could not be highlighted due to the maximum number of nodes being
 # reached, and how to turn highlighting off
-highlightOutputMaxReached=%1$S nodes matched, but only %2$S nodes highlighted. Use '--showall' to show all
+highlightOutputMaxReached=%1$S nód comhoiriúnach, cé nach bhfuil ach %2$S nód aibhsithe. Úsáid '--showall' le gach nód a thaispeáint
 
 # LOCALIZATION NOTE (unhighlightDesc) A very short description of the
 # 'unhighlight' command. See unhighlightManual for a fuller description of what
@@ -586,12 +586,12 @@ dbgUnBlackBoxEmptyDesc=(Did not stop black boxing any sources)
 
 # LOCALIZATION NOTE (dbgUnBlackBoxNonEmptyDesc) A very short string used to let the
 # user know which sources we stopped black boxing.
-dbgUnBlackBoxNonEmptyDesc=Stopped black boxing the following sources:
+dbgUnBlackBoxNonEmptyDesc=Níl na foinsí seo a leanas i mbosca dubh a thuilleadh:
 
 # LOCALIZATION NOTE (dbgUnBlackBoxErrorDesc) A very short string used to let the
 # user know there was an error black boxing a source (whose url follows this
 # text).
-dbgUnBlackBoxErrorDesc=Error stopping black boxing:
+dbgUnBlackBoxErrorDesc=Earráid agus foinsí á dtógáil as bosca dubh:
 
 # LOCALIZATION NOTE (dbgUnBlackBoxInvertDesc) A very short string used to describe the
 # 'invert' parameter to the 'dbg unblackbox' command.
@@ -697,7 +697,7 @@ cmdSetdirDesc=Comhadlann mozcmd socraithe
 
 # LOCALIZATION NOTE (cmdSetdirManual2) A fuller description of the 'cmd setdir'
 # command, displayed when the user asks for help on what it does.
-cmdSetdirManual2=A 'mozcmd' directory is an easy way to create new custom commands. For more information see the <a href="https://developer.mozilla.org/docs/Tools/GCLI/Customization">MDN documentation</a>.
+cmdSetdirManual2=Is furasta orduithe nua a chruthú le comhadlann 'mozcmd'. Chun tuilleadh eolais a fháil, léigh <a href="https://developer.mozilla.org/docs/Tools/GCLI/Customization">an doiciméadú MDN</a>.
 
 # LOCALIZATION NOTE (cmdSetdirDirectoryDesc) The description of the directory
 # parameter to the 'cmd setdir' command.
@@ -1108,7 +1108,7 @@ jsbIndentSizeDesc=Méid eangaithe, carachtair
 # LOCALIZATION NOTE (jsbIndentSizeManual) A fuller description of the
 # 'jsb <indentChar>' parameter, displayed when the user asks for help on what it
 # does.
-jsbIndentSizeManual=The number of chars with which to indent each line
+jsbIndentSizeManual=Cé mhéad carachtar le húsáid san eangú ar gach líne
 
 # LOCALIZATION NOTE (jsbIndentCharDesc) A very short description of the
 # 'jsb <indentChar>' parameter. This string is designed to be shown in a menu
