Bug 1050774 - Record script execution in timeline view

--- a/sk/browser/chrome/browser/devtools/timeline.properties
+++ b/sk/browser/chrome/browser/devtools/timeline.properties
@@ -38,6 +38,7 @@ timeline.records=ZÁZNAMY
 timeline.label.styles=Štýly
 timeline.label.reflow=Prekreslenie
 timeline.label.paint=Vykreslenie
+timeline.label.javascript=JavaScript
 timeline.label.domevent=Udalosť DOM
 timeline.label.consoleTime=Konzola
 
