[browser] November update

--- a/fr/browser/chrome/browser/devtools/gclicommands.properties
+++ b/fr/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,10 @@ helpDesc=Obtenir de l'aide sur les commandes disponibles
 # explain the contents of the command help table.
 helpAvailable=Commandes disponibles
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+notAvailableInE10S=La commande « %1$S » n'est pas disponible en mode multi-processus (E10S)
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc=Commandes de contrôle de la console
