--- a/fr/browser/chrome/browser/devtools/webide.properties
+++ b/fr/browser/chrome/browser/devtools/webide.properties
@@ -19,7 +19,7 @@ importPackagedApp_title=Sélectionner un répertoire
 importHostedApp_title=Ouvrir une application hébergée
 importHostedApp_header=Saisir une URL de manifeste
 
-notification_showTroubleShooting_label=dépannage
+notification_showTroubleShooting_label=Dépanner
 notification_showTroubleShooting_accesskey=d
 
 # LOCALIZATION NOTE (project_tab_loading): This is shown as a temporary tab
@@ -52,6 +52,7 @@ addons_simulator_label=Simulateur Firefox OS %1$S (%2$S)
 addons_install_button=installer
 addons_uninstall_button=désinstaller
 addons_adb_label=Module ADB Helper
+addons_adapters_label=Module Tools Adapters
 addons_adb_warning=Les périphériques USB ne seront pas détectés sans ce module complémentaire
 addons_status_unknown=?
 addons_status_installed=Installé
