--- a/fr/security/manager/chrome/pippki/pippki.properties
+++ b/fr/security/manager/chrome/pippki/pippki.properties
@@ -78,7 +78,7 @@ pageInfo_WeakEncryptionWithBits=Connexion chiffrée : chiffrement de bas niveau
 pageInfo_Privacy_Weak1=Le site web %S utilise un chiffrement de bas niveau pour la page que vous voyez.
 pageInfo_Privacy_Weak2=Un chiffrement de bas niveau peut permettre à certaines personnes non autorisées de voir les données transmises.
 pageInfo_MixedContent=Connexion partiellement chiffrée
-pageInfo_Privacy_Mixed1=Certaines parties de la page que vous visionnez n'ont pas été chiffrées avant d'être transmises sur Internet.
+pageInfo_Privacy_Broken1=Certaines parties de la page que vous visionnez n'ont pas été chiffrées ou leur niveau de chiffrement est trop bas pour pouvoir être transmises sur Internet.
 
 #Cert Viewer
 certDetails=Détails du certificat :
