--- a/fr/toolkit/chrome/global/aboutSupport.properties
+++ b/fr/toolkit/chrome/global/aboutSupport.properties
@@ -82,3 +82,7 @@ webglRenderer = Rendu WebGL
 
 minLibVersions = Version minimale attendue
 loadedLibVersions = Version utilisée
+
+hasSeccompBPF = Seccomp-BPF (Filtrage des appels système)
+canSandboxContent = Bac à sable pour les processus de contenu
+canSandboxMedia = Bac à sable pour les plugins multimédia
