--- a/it/mobile/overrides/appstrings.properties
+++ b/it/mobile/overrides/appstrings.properties
@@ -29,6 +29,6 @@ externalProtocolChkMsg = Ricorda la scelta effettuata per tutti i link di questo
 externalProtocolLaunchBtn = Avvia applicazione
 malwareBlocked = Il sito web %S è stato segnalato come sito web malevolo ed è stato bloccato sulla base delle impostazioni di sicurezza.
 phishingBlocked = Il sito web %S è stato segnalato come sito contraffatto, realizzato per indurre gli utenti a rivelare informazioni personali o finanziarie.
-cspFrameAncestorBlocked = Questa pagina presenta dei criteri sulla sicurezza dei contenuti che ne impediscono l’inclusione con questa modalità.
+cspBlocked = Questa pagina presenta dei criteri sulla sicurezza dei contenuti che ne impediscono il caricamento con questa modalità.
 corruptedContentError = La pagina richiesta non può essere visualizzata a causa di un errore rilevato durante la trasmissione dei dati.
 remoteXUL = Questa pagina utilizza una tecnologia non supportata che non è più disponibile per impostazione predefinita in Firefox.
