--- a/it/webapprt/webapprt/overrides/appstrings.properties
+++ b/it/webapprt/webapprt/overrides/appstrings.properties
@@ -29,6 +29,6 @@ externalProtocolChkMsg = Ricorda la scelta effettuata per tutti i link di questo
 externalProtocolLaunchBtn = Avvia applicazione
 malwareBlocked = Il sito web %S è stato segnalato come sito web malevolo ed è stato bloccato sulla base delle impostazioni di sicurezza.
 phishingBlocked = Il sito web %S è stato segnalato come sito contraffatto, realizzato per indurre gli utenti a rivelare informazioni personali o finanziarie.
-cspFrameAncestorBlocked = Tentativo da parte dell’applicazione di accedere a una risorsa con criteri sulla sicurezza dei contenuti che ne impediscono l’inclusione con questa modalità.
+cspBlocked = Tentativo da parte dell’applicazione di accedere a una risorsa con criteri sulla sicurezza dei contenuti che ne impediscono il caricamento con questa modalità.
 corruptedContentError = Impossibile continuare il caricamento dell’applicazione a causa di un errore rilevato durante la trasmissione dei dati.
 remoteXUL = Questa applicazione ha cercato di utilizzare una tecnologia non supportata e non è più disponibile.
