[oc] update from Pootle (firefox)

--- a/oc/toolkit/chrome/global/aboutSupport.properties
+++ b/oc/toolkit/chrome/global/aboutSupport.properties
@@ -64,6 +64,7 @@ clearTypeParametersNotFound = Paramètres ClearType introbables
 adapterDescription = Descripcion de la carta
 adapterVendorID = ID del vendeire
 adapterDeviceID = ID del periferic
+adapterSubsysID = ID del sosistèma
 adapterDrivers = Pilòts de la carta
 adapterRAM = RAM de la carta
 driverVersion = Version del pilòt
@@ -71,6 +72,7 @@ driverDate = Data del pilòt
 adapterDescription2 = Descripcion de la carta (GPU #2)\u0020
 adapterVendorID2 = ID del vendeire (GPU #2)\u0020
 adapterDeviceID2 = ID del periferic (GPU #2)
+adapterSubsysID2 = ID del sosistèma (GPU #2)
 adapterDrivers2 = Pilòt de la carta (GPU #2)
 adapterRAM2 = RAM de la carta (GPU #2)
 driverVersion2 = Version del pilòt (GPU #2)
