--- a/ja-JP-mac/dom/chrome/accessibility/AccessFu.properties
+++ b/ja-JP-mac/dom/chrome/accessibility/AccessFu.properties
@@ -160,6 +160,7 @@ statePressed     =    押した状態
 stateExpanded    =    展開状態
 stateCollapsed   =    折りたたみ状態
 stateUnavailable =    利用不可
+stateReadonly    =    読み取り専用
 stateRequired    =    必須
 stateTraversed   =    訪問済み
 stateHasPopup    =    ポップアップあり
