--- a/ja-JP-mac/dom/chrome/security/security.properties
+++ b/ja-JP-mac/dom/chrome/security/security.properties
@@ -1,16 +1,20 @@
 # Mixed Content Blocker
 # LOCALIZATION NOTE: "%1$S" is the URI of the blocked mixed content resource
 # Mixed Content Blocker
-BlockMixedDisplayContent	=混在表示コンテンツ "%1$S" の読み込みをブロックしました
-BlockMixedActiveContent		=混在アクティブコンテンツ "%1$S" の読み込みをブロックしました
+BlockMixedDisplayContent		=混在表示コンテンツ "%1$S" の読み込みをブロックしました
+BlockMixedActiveContent			=混在アクティブコンテンツ "%1$S" の読み込みをブロックしました
 
 # CORS
-CrossSiteRequestBlocked=クロスオリジンリクエストをブロック: 同一生成元ポリシーにより、%1$S にあるリモートリソースの読み込みを拒否します。リソースを同一ドメインに移動するか、CORS を有効にすると解決できます。
+CrossSiteRequestBlocked			=クロスオリジンリクエストをブロック: 同一生成元ポリシーにより、%1$S にあるリモートリソースの読み込みを拒否します。リソースを同一ドメインに移動するか、CORS を有効にすると解決できます。
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
-InvalidSTSHeaders		=サイトに無効な Strict-Transport-Security ヘッダが指定されています。
+InvalidSTSHeaders			=サイトに無効な Strict-Transport-Security ヘッダが指定されています。
+# LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
+InvalidPKPHeaders			=サイトに無効な Public-Key-Pins ヘッダが指定されています。
 InsecurePasswordsPresentOnPage		=パスワードフィールドが安全でない (http://) ページ上にあり、ユーザのログイン情報の盗難を許すセキュリティ上の危険性があります。
 InsecureFormActionPasswordsPresent	=パスワードフィールドが安全でない (http://) フォームアクションを持つフォーム要素内にあり、ユーザのログイン情報の盗難を許すセキュリティ上の危険性があります。
 InsecurePasswordsPresentOnIframe	=パスワードフィールドが安全でない (http://) iframe 内にあり、ユーザのログイン情報の盗難を許すセキュリティ上の危険性があります。
-LoadingMixedActiveContent	=安全なページ  "%1$S" 上で (安全でない) 混在アクティブコンテンツを読み込んでいます
-LoadingMixedDisplayContent	=安全なページ  "%1$S" 上で (安全でない) 混在表示コンテンツを読み込んでいます
+LoadingMixedActiveContent		=安全なページ  "%1$S" 上で (安全でない) 混在アクティブコンテンツを読み込んでいます
+LoadingMixedDisplayContent		=安全なページ  "%1$S" 上で (安全でない) 混在表示コンテンツを読み込んでいます
+# LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
+BothAllowScriptsAndSameOriginPresent	=iframe の sandbox 属性にサンドボックスを解除できる allow-scripts 属性と allow-same-origin 属性の両方が指定されています。
