--- a/ja/netwerk/necko.properties
+++ b/ja/netwerk/necko.properties
@@ -38,3 +38,5 @@ PhishingAuth		= "%1$S" を訪れようとしています。このサイトはあ
 PhishingAuthAccept	= 理解し十分に注意を払います
 SuperfluousAuth		= サイト "%1$S" にユーザ名 "%2$S" でログインしようとしていますが、Web サイトは認証を必要としていません。このサイトはあなたをだまそうとしている可能性があります。\n\nサイト "%1$S" に接続しますか？
 AutomaticAuth		= サイト "%1$S" にユーザ名 "%2$S" でログインしようとしています。
+
+TrackingUriBlocked	= 追跡からの保護機能が有効なため、"%1$S" のリソースがブロックされました。
