[S] dom: Bug 1083285 - Fix noisy IndexedDB error, replace with better warning

--- a/it/dom/chrome/dom/dom.properties
+++ b/it/dom/chrome/dom/dom.properties
@@ -143,3 +143,4 @@ KeyNameZoomWarning = Il valore “Zoom” per KeyboardEvent.key è obsoleto e ve
 KeyNameDeadKeysWarning = I valori che iniziano con “Dead” per KeyboardEvent.key sono obsoleti e verranno sostituiti semplicemente da “Dead”. Per ulteriori informazioni consultare https://developer.mozilla.org/docs/Web/API/KeyboardEvent.key
 ImportXULIntoContentWarning = L’importazione di nodi XUL nel contenuto di un documento è deprecata. Questa funzione potrebbe essere rimossa a breve.
 XMLDocumentLoadPrincipalMismatch = L’utilizzo di document.load è proibito su documenti provenienti da altre finestre. Solo la finestra in cui il documento è stato creato può chiamare .load sul documento stesso. Al suo posto è preferibile utilizzare XMLHttpRequest.
+IndexedDBTransactionAbortNavigation = Una transazione IndexedDB incompleta è stata annullata dalla navigazione nella pagina.
