[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/browser.properties
+++ b/fa/browser/chrome/browser/browser.properties
@@ -450,6 +450,7 @@ service.toolbarbutton.label=خدمات
 service.toolbarbutton.tooltiptext=خدمات
 
 # LOCALIZATION NOTE (social.install.description): %1$S is the hostname of the social provider, %2$S is brandShortName (e.g. Firefox)
+service.install.description=آیا تمایل دارید جهت نمایش %2$S در نوار ابزارخود سرویسی از%1$S رافعال کنید؟
 service.install.ok.label=فعال کردن سرویسها
 service.install.ok.accesskey=ف
 
@@ -515,6 +516,8 @@ getUserMedia.shareEntireScreen.label = تمام صفحه
 # The number of devices can be either one or two.
 getUserMedia.shareSelectedDevices.label = به اشتراک‌گذاری دستگاه‌های انتخاب‌شده؛ به اشتراک‌گذاری دستگاه‌های انتخاب‌شده
 getUserMedia.shareSelectedDevices.accesskey = ب
+getUserMedia.shareApplication.label = به اشتراک گذاری برنامه انتخاب‌شده
+getUserMedia.shareWindow.label = به اشتراک گذاری پنجره انتخاب‌شده
 getUserMedia.shareSelectedItems.label = به‌اشتراک‌گذاری‌ موارد انتخاب‌شده
 getUserMedia.always.label = همیشه به اشتراک گذاشته شود
 getUserMedia.always.accesskey = ه
@@ -552,6 +555,13 @@ getUserMedia.sharingMenu.accesskey = د
 getUserMedia.sharingMenuCamera = %S (دوربین)
 getUserMedia.sharingMenuMicrophone = %S (میکروفن)
 getUserMedia.sharingMenuApplication = %S (برنامه)
+getUserMedia.sharingMenuScreen = %S (صفحه‌نمایش)
+getUserMedia.sharingMenuWindow = %S (پنجره)
+getUserMedia.sharingMenuCameraMicrophone = %S(دوربین و میکروفن)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S(دوربین, میکروفن و برنامه)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S(دوربین, میکروفن و صفحه‌نمایش)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S(دوربین, میکروفن و پنجره)
+getUserMedia.sharingMenuCameraWindow = %S(دوربین و پنجره)
 getUserMedia.sharingMenuMicrophoneApplication = %S (میکروفون و برنامه)
 getUserMedia.sharingMenuMicrophoneScreen = %S (میکروفون و صفحه نمایش)
 getUserMedia.sharingMenuMicrophoneWindow = %S (میکروفون و پنجره)
@@ -565,9 +575,11 @@ getUserMedia.sharingMenuUnknownHost = مبدا نا‌شناخته
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
 # in customizeTips.tip0.hint, %2$S will be replaced with brandShortName, %3$S will
 # be replaced with a hyperlink containing the text defined in customizeTips.tip0.learnMore.
+customizeTips.tip0.learnMore = بیشتر بدانید
 
 # LOCALIZATION NOTE(appmenu.*.description, appmenu.*.label): these are used for
 # the appmenu labels and buttons that appear when an update is staged for
 # installation or a background update has failed and a manual download is required.
 # %S is brandShortName
+appmenu.restartNeeded.description = راه‌اندازی مجدد%S جهت اعمال به روز رسانی\u0020
 appmenu.restartBrowserButton.label = راه‌اندازی مجدد %S
