[fa] update from Pootle (firefox)

--- a/fa/browser/chrome/browser/syncSetup.properties
+++ b/fa/browser/chrome/browser/syncSetup.properties
@@ -51,6 +51,7 @@ existingAccount.change.label = برای تغییر این مورد دکمهٔ گ
 
 # Firefox Accounts based setup.
 continue.label = ادامه
+disconnect.verify.title = قطع ارتباط
 # LOCALIZATION NOTE (disconnect.verify.description): %S will be replaced with
 # brandShortName
 
