[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/browser.properties
+++ b/pt-BR/browser/chrome/browser/browser.properties
@@ -153,6 +153,8 @@ pluginInfo.unknownPlugin=Desconhecido
 # LOCALIZATION NOTE (pluginActivateAlways.label): This button will enable the
 # plugin for a long while (90 days), auto-renewed if the site keeps using the
 # plugin.
+pluginBlockNow.label=Bloquear plugin
+pluginBlockNow.accesskey=B
 pluginContinue.label=Continuar permitindo
 pluginContinue.accesskey=C
 
@@ -303,6 +305,8 @@ editBookmarkPanel.editBookmarkTitle=Propriedades do favorito
 editBookmark.removeBookmarks.label=Excluir;Excluir #1 favoritos
 
 # Post Update Notifications
+pu.notifyButton.label=Detalhes…
+pu.notifyButton.accesskey=D
 # LOCALIZATION NOTE %S will be replaced by the short name of the application.
 puNotifyText=O %S foi atualizado
 puAlertTitle=%S atualizado
@@ -445,6 +449,8 @@ social.marklinkMenu.label=Salvar link no %S
 
 # LOCALIZATION NOTE (social.error.message): %1$S is brandShortName (e.g. Firefox), %2$S is the name of the social provider
 social.error.message=O %1$S está impossibilitado de conectar-se com o %2$S neste momento.
+social.error.tryAgain.label=Tentar de novo
+social.error.tryAgain.accesskey=T
 
 # LOCALIZATION NOTE: %1$S is the label for the toolbar button, %2$S is the associated badge numbering that the social provider may provide.
 social.aria.toolbarButtonBadgeText=%1$S (%2$S)
