--- a/pt-BR/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/pt-BR/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,7 +97,11 @@ quit-button.tooltiptext.linux2 = Sair do %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Sair do %1$S (%2$S)
 
+loop-call-button2.label = Iniciar uma conversa
+loop-call-button2.tooltiptext = Iniciar uma conversa
 
+social-share-button.label = Compartilhar esta página
+social-share-button.tooltiptext = Compartilhar esta página
 
 panic-button.label = Esquecer
 panic-button.tooltiptext = Esquecer uma parte de seus dados pessoais
@@ -107,4 +111,5 @@ web-apps-button.tooltiptext = Descubra aplicativos
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
+devtools-webide-button.label = WebIDE
 devtools-webide-button.tooltiptext = Abrir WebIDE
