--- a/pt-BR/browser/chrome/browser/devtools/timeline.properties
+++ b/pt-BR/browser/chrome/browser/devtools/timeline.properties
@@ -33,3 +33,4 @@ timeline.tick=%S ms
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 timeline.label.styles=Estilos
+timeline.label.domevent=Evento DOM
