--- a/pt-BR/browser/chrome/browser/downloads/downloads.properties
+++ b/pt-BR/browser/chrome/browser/downloads/downloads.properties
@@ -58,6 +58,7 @@ blockedUncommon=Pode não ser seguro abrir este arquivo.
 # as malware and lower for uncommon downloads.
 # Note: These strings don't exist in the UI yet.  See bug 1053890.
 unblockTypeMalware=Este arquivo contém um vírus ou outro malware que irá danificar seu computador.
+unblockTypeUncommon=Este arquivo foi baixado de um site desconhecido e potencialmente perigoso e pode não ser seguro abri-lo.
 
 # LOCALIZATION NOTE (sizeWithUnits):
 # %1$S is replaced with the size number, and %2$S with the measurement unit.
