[th] update from Pootle (firefox)

--- a/th/mobile/android/chrome/browser.properties
+++ b/th/mobile/android/chrome/browser.properties
@@ -7,8 +7,11 @@ addonsConfirmInstall.install=ติดตั้ง
 
 # Alerts
 alertAddonsDownloading=กำลังโหลดส่วนเสริม
-alertAddonsInstalledNoRestart=ติดตั้งสำเร็จ
 alertAddonsFail=ติดตั้งไม่สำเร็จ
+alertAddonsInstalledNoRestart.message=ติดตั้งสำเร็จ
+
+# LOCALIZATION NOTE (alertAddonsInstalledNoRestart.action2): Ideally, this string is short (it's a
+# button label) and upper-case, to match Google and Android's convention.
 
 alertDownloadsStart2=กำลังเริ่มดาวน์โหลด…
 alertDownloadsDone2=การดาวน์โหลดเสร็จสิ้น
@@ -19,6 +22,8 @@ alertDownloadsToast=เริ่มการดาวน์โหลด…
 alertDownloadsPause=หยุดพัก
 alertDownloadsResume=ทำต่อ
 alertDownloadsCancel=ยกเลิก
+# LOCALIZATION NOTE (undoCloseToast.message): This message appears in a toast
+# when the user tries to download something in Guest mode.
 
 alertFullScreenToast=กด ย้อนกลับ เพื่อออกจากมุมมองเต็มจอ
 
@@ -114,6 +119,19 @@ contacts.ask=อนุญาตให้ %S เข้าถึงรายชื
 # checkbox to indicate whether or not the user wants to make a permanent decision.
 contacts.dontAskAgain=ไม่ต้องถามอีกสำหรับเว็บนี้
 
+# Device Storage API
+# LOCALIZATION NOTE (deviceStorageMusic.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStoragePictures.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStorageSdcard.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
+# LOCALIZATION NOTE (deviceStorageVideos.dontAskAgain): This label appears next to a
+# checkbox to indicate whether or not the user wants to make a permanent decision.
+
 # New Tab Popup
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -169,7 +187,8 @@ browser.menu.showCharacterEncoding=false
 selectionHelper.textCopied=คัดลอกข้อความลงคลิปบอร์ดแล้ว
 
 # Casting
-casting.prompt=ถ่ายทอดไปยังอุปกรณ์
+# LOCALIZATION NOTE (casting.sendToDevice): Label that will be used in the
+# dialog/prompt.
 
 # Context menu
 contextmenu.openInNewTab=เปิดลิงก์ในแท็บใหม่
@@ -193,7 +212,6 @@ contextmenu.shareImage=แบ่งปันรูปภาพ
 contextmenu.search=ค้นหาด้วย %S
 contextmenu.saveImage=บันทึกรูปภาพ
 contextmenu.setImageAs=บันทึกรูปเป็น
-contextmenu.addSearchEngine=เพิ่มเครื่องมือค้นหา
 contextmenu.playMedia=เล่น
 contextmenu.pauseMedia=หยุดชั่วคราว
 contextmenu.shareMedia=แบ่งปันวิดีโอ
@@ -203,7 +221,8 @@ contextmenu.unmute=เลิกเงียบ
 contextmenu.saveVideo=บันทึกแฟ้มวิดีโอ
 contextmenu.saveAudio=บันทึกเสียง
 contextmenu.addToContacts=เพิ่มลงรายชื่อติดต่อ
-contextmenu.castToScreen=ถ่ายทอดไปยังหน้าจอ
+# LOCALIZATION NOTE (contextmenu.sendToDevice):
+# The label that will be used in the contextmenu and the pageaction
 
 contextmenu.copy=คัดลอก
 contextmenu.cut=ตัด
@@ -234,16 +253,6 @@ timer.start=%S: timer started
 # This string is used to display the result of the console.timeEnd() call.
 # %1$S=name of timer, %2$S=number of milliseconds
 timer.end=%1$S: %2$Sms
-
-# Webapps
-webapps.installTitle=ติดตั้งแอปพลิเคชั่น
-webapps.alertSuccess=ติดตั้งสำเร็จแล้ว
-# Shown when there is a generic problem installing an app
-webapps.installError=เกิดข้อผิดพลาดในการติดตั้งโปรแกรม
-# Shown when there is something wrong with an apps manifest
-webapps.manifestInstallError=Application manifest ไม่ถูกต้อง
-# Shown when a network error prevented installing an app
-webapps.networkInstallError=ไม่สามารถดาวน์โหลด manifest ได้
 
 # Click to play plugins
 clickToPlayPlugins.message2=%S มีเนื้อหาที่ต้องเล่นด้วยโปรแกรมเสริม คุณต้องการเปิดใช้หรือไม่?
@@ -283,6 +292,8 @@ remoteNotificationGenericName=แอป
 # LOCALIZATION NOTE (remoteNotificationMessage): %S is the port on which
 # the remote debugger server is listening.
 remoteNotificationMessage=รอรับการเชื่อมต่อที่พอร์ต %S
+# LOCALIZATION NOTE (remoteStartNotificationTitle): %S is the name of the app.
+# LOCALIZATION NOTE (remoteStartNotificationMessage):
 
 # Helper apps
 helperapps.open=เปิด
@@ -331,3 +342,8 @@ openInApp.cancel = ยกเลิก
 #Tabs in context menus
 
 # "Subscribe to page" prompts created in FeedHandler.js
+
+# LOCALIZATION NOTE (nativeWindow.deprecated):
+# This string is shown in the console when someone uses deprecated NativeWindow apis.
+# %1$S=name of the api that's deprecated, %2$S=New API to use. This may be a url to
+# a file they should import or the name of an api.
