[xh] update from Pootle (firefox)

--- a/xh/webapprt/webapprt/overrides/dom.properties
+++ b/xh/webapprt/webapprt/overrides/dom.properties
@@ -4,9 +4,9 @@
 
 KillScriptTitle=Isilumkiso: Iskripthi asiniki mpendulo
 KillScriptMessage=Iskripthi sisenokuba sisaxakekile, okanye sisenokuba siyekile ukusabela. Ungasiyeka iskripthi ngoku, okanye ungaqhubeka ukuze ubone ukuba iskripthi siza kugqiba na.
-KillScriptWithDebugMessage=Iskripthi sisenokuba sisaxakekile, okanye sisenokuba siyekile ukusabela. Ungasiyeka iskripthi ngoku, uvule isikripthio kwi-debugger, okanye uvumele iskripthi siqhubeke.
+KillScriptWithDebugMessage=Iskripthi sisenokuba sisaxakekile, okanye sisenokuba siyekile ukusabela. Ungasiyeka iskripthi ngoku, uvule isikripthi kwi-debugger, okanye uvumele iskripthi siqhubeke.
 KillScriptLocation=Iskripthi: %S
-StopScriptButton=Nqumamisa iscript
+StopScriptButton=Nqumamisa iscripthi
 DebugScriptButton=Iskripthi sedebug
 WaitForScriptButton=Qhuba
 DontAskAgain=&Ungaphindi undibuze
