[xh] update from Pootle (firefox)

--- a/xh/webapprt/webapprt/overrides/dom.properties
+++ b/xh/webapprt/webapprt/overrides/dom.properties
@@ -62,7 +62,7 @@ NodeValueWarning=Ukusetyenziswa kweempawu ze-nodeValue akwamkelwanga. Sebenzisa 
 TextContentWarning=Ukusetyenziswa kweempawu ze-textContent akwamkelwanga. Sebenzisa amanani endaweni yayo.
 EnablePrivilegeWarning=Ukusetyenziswa kwe-enablePrivilege akwamkelwanga. Sicela usebenzise ikhowudi ehambisana nenkqubo (umz. isandiso) endaweni yayo.
 nsIJSONDecodeDeprecatedWarning=i-nsIJSON.decode ayamkelwanga. Sicela usebenzise i-JSON.parse endaweni yayo.
-nsIJSONEncodeDeprecatedWarning=I-nsIJSON.encode ayamkelwanga. Sicela usebenzise i-JSON.stringify endaweni yayo.
+nsIJSONEncodeDeprecatedWarning=i-nsIJSON.encode ayamkelwanga. Sicela usebenzise i-JSON.stringify endaweni yayo.
 nsIDOMWindowInternalWarning=Ukusetyenziswa kwe-nsIDOMWindowInternal akwamkelwanga. Ukusetyenziswa kwe-nsIDOMWindow akwamkelwanga.
 InputEncodingWarning=Ukusetyenziswa kwe-inputEncoding akwamkelwanga.
 # LOCALIZATION NOTE: Do not translate "MozBeforePaint" and "mozRequestAnimationFrame"
@@ -83,7 +83,7 @@ FullScreenDeniedContentOnly=Isicelo seskrini esipheleleyo sikhatyiwe ngenxa yoku
 RemovedFullScreenElement=Iphumile kwiskrini esipheleleyo ngenxa yokuba i-elementi isusiwe kuxwebhu.
 FocusedWindowedPluginWhileFullScreen=Iphumile kwiskrini esipheleleyo ngenxa yokuba isifakelo sewindow sijolisiwe.
 HTMLSyncXHRWarning=Ukuphicothwa kwe-HTML kwi-XMLHttpRequest akuxhaswa kwimo yongqamaniso.
-InvalidRedirectChannelWarning=Asikwazi ukukuthumela kwi-%S ngenxa yokuba le tshanele ayiyisebenzisi i-nsIWritablePropertyBag2.
+InvalidRedirectChannelWarning=Asikwazi ukukuthumela kwi-%S ngenxa yokuba le tshaneli ayiyisebenzisi i-nsIWritablePropertyBag2.
 ResponseTypeSyncXHRWarning=Ukusetyenziswa kophawu lwe-XMLHttpRequest's responseType akusaxhaswa kwimo yongqamaniso kwiwindow.
 WithCredentialsSyncXHRWarning=Ukusetyenziswe kophawu lwe-XMLHttpRequest's withCredentials akusaxhaswa kwimo yongqamaniso lwe-window.
 TimeoutSyncXHRWarning=Ukusetyenziswa kophawu lwe-XMLHttpRequest's timeout attribute akusaxhaswa kwimo yongqamaniso lwe-window.
@@ -103,7 +103,7 @@ MediaLoadSourceMissingSrc=<source> i-elementi "src" ayinaluphawu. Ukulayishwa kw
 # LOCALIZATION NOTE: %1$S is the Http error code the server returned (e.g. 404, 500, etc), %2$S is the URL of the media resource which failed to load.
 MediaLoadHttpError=Ukulayishwa kwe-HTTP kusilele kwemeko ye-%1$S. Ukulayishwa komthombo we-media %2$S kusilele.
 # LOCALIZATION NOTE: %S is the URL of the media resource which failed to load.
-MediaLoadInvalidURI=I-URI engasebenziyo. Ukulayishwa komthombo we-mediya %S kusilele.
+MediaLoadInvalidURI=I-URI engasebenziyo. Ukulayishwa komthombo we-media %S kusilele.
 # LOCALIZATION NOTE: %1$S is the media resource's format/codec type (basically equivalent to the file type, e.g. MP4,AVI,WMV,MOV etc), %2$S is the URL of the media resource which failed to load.
 MediaLoadUnsupportedTypeAttribute=Uphawu "type" oluchaziweyo lwe-"%1$S" aluxhaswa. Ukulayishwa komthombo we-media %2$S kusilele.
 # LOCALIZATION NOTE: %1$S is the "media" attribute value of the <source> element. It is a media query. %2$S is the URL of the media resource which failed to load.
@@ -117,7 +117,7 @@ DOMExceptionCodeWarning=Ukusetyenziswa kophawu lwekhowudi ye-DOMException's akwa
 # LOCALIZATION NOTE: Do not translate "__exposedProps__"
 NoExposedPropsWarning=Ukusetyenziswa kwezinto ze-chrome JS kumbandela ngaphandle __exposedProps__ akhuselekanga yaye akwamkelwa. Bona i-https://developer.mozilla.org/en/XPConnect_wrappers ukuze ufumane inkcazelo engakumbi.
 # LOCALIZATION NOTE: Do not translate "Mutation Event" and "MutationObserver"
-MutationEventWarning=Ukusetyenziswa kwemiCimbi ye-Mutation akwamkelwa. Sebenzisa i-MutationObserver endaweni yayo.
+MutationEventWarning=Ukusetyenziswa kweMicimbi ye-Mutation akwamkelwa. Sebenzisa i-MutationObserver endaweni yayo.
 # LOCALIZATION NOTE: Do not translate "Components"
 ComponentsWarning=Izinto zeKhomponenti azamkelwanga. Ziza kushenxiswa kungekudala.
 PluginHangUITitle=Isilumkiso: Isifakelo esingasabeliyo
