--- a/ja-JP-mac/dom/chrome/security/csp.properties
+++ b/ja-JP-mac/dom/chrome/security/csp.properties
@@ -35,7 +35,7 @@ ignoringUnknownOption		=不明なオプションを無視しました: %1$S
 reportURInotHttpsOrHttp2	=レポート URI (%1$S) が HTTP または HTTPS の URI ではありません。
 # LOCALIZATION NOTE (reportURInotInReportOnlyHeader):
 # %1$S is the ETLD of the page with the policy
-reportURInotInReportOnlyHeader	=サイトに設定された Report-Only ポリシーにレポート URI がありません。CSP はこのポリシーに対する違反をブロックしません。また、違反をレポートできません。
+reportURInotInReportOnlyHeader	=このサイト (%1$S) に設定された Report-Only ポリシーにレポート URI がありません。CSP はこのポリシーに対する違反をブロックしません。また、違反をレポートできません。
 # LOCALIZATION NOTE (failedToParseUnrecognizedSource):
 # %1$S is the CSP Source that could not be parsed
 failedToParseUnrecognizedSource	=認識できないソースの解析に失敗しました: %1$S
