[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/browser.properties
+++ b/pt-BR/browser/chrome/browser/browser.properties
@@ -104,6 +104,8 @@ badContentBlocked.blocked.message=O %S está bloqueando conteúdo nesta página.
 badContentBlocked.notblocked.message=O %S não está bloqueando nenhum conteúdo nesta página.
 
 crashedpluginsMessage.title=O plugin %S travou.
+crashedpluginsMessage.submitButton.label=Enviar um relatório de travamento
+crashedpluginsMessage.submitButton.accesskey=E
 crashedpluginsMessage.learnMore=Saiba mais…
 
 # Keyword fixup messages
